# Minerva-AI-Evolutionary-RAG

./: Dockerfile  LICENSE  README.md  cli.py  config.yaml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  docker-build.yml  release.yml
.github/workflows/.github/workflows/: format.yml
core/: evolution.py
minerva/: cli.py
minerva/core/: evolution.py  genome.py
minerva/retrieval/: holographic.py
retrieval/: fractal_parser.py
scripts/automation/: auto_benchmark.py  generate_report.py
scripts/deployment/: build_docker.sh  deploy_model.py
scripts/setup/: install_dependencies.sh  setup_environment.py
scripts/test/: benchmark.py  run_tests.sh  test_accuracy.py
scripts/utils/: check_storage.py  monitor_performance.py
tests/: conftest.py
tests/integration/: test_cli.py  test_rag_pipeline.py
tests/unit/: test_evolution.py  test_genome.py  test_holographic.py
